test/classes/delete-free/undecorated-generic/cannot-pass-cq.good
cannot-pass-cq.chpl:4: In function 'test':
cannot-pass-cq.chpl:5: error: the type of the actual argument 'C?' is generic
note: generic actual arguments are not currently supported
cannot-pass-cq.chpl:5: note: 'C?' now means nilable class with any management
cannot-pass-cq.chpl:5: note: to migrate old code, change it to 'borrowed C?'
