test/classes/delete-free/undecorated-generic/cannot-pass-cq.chpl
class C { var x: int; }

proc typefn(type t) { }
proc test() {
  typefn(C?);
}
test();
